// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout renders succesfully 1`] = `
Array [
  <div
    className="css-1br8pp4"
  >
    <div
      className="css-1stuufb"
    >
      <h1
        className="css-1vvherk"
      >
        Cluster
      </h1>
      <span
        className="css-1ggp6x0"
      >
        Heading content
      </span>
    </div>
  </div>,
  <div
    className="css-18mq3p9"
  >
    <div
      className="css-1stuufb"
    >
      <h1
        className="css-1vvherk"
      >
        Cluster
      </h1>
      <div
        className="css-1tr219l"
      >
        <div
          className="css-1zje6z"
        >
          <button
            className="css-1mocbyz"
            type="button"
          >
            Details
          </button>
        </div>
        <div
          className="css-1zje6z"
        >
          <button
            className="css-1mocbyz"
            type="button"
          >
            Issues
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="css-pujxu8"
  >
    <div
      className="css-1e77lro"
    >
      Hello, I'm error!
    </div>
    <div
      className="css-1stuufb"
    >
      <h1
        className="css-1b2tio5"
      >
        Reports list
      </h1>
      <div
        className="css-t9oodn"
      >
        <div
          className="css-1zje6z"
        >
          <div
            className="css-jwj6c2"
          >
            <input
              className="css-18swi04"
              onBlur={[Function]}
              onFocus={[Function]}
            />
            <div
              className="css-6kpmax"
            >
              <svg
                className="css-1oq5xej"
                viewBox="0 0 16 16"
              >
                <use
                  xlinkHref="#search"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="css-1zje6z"
        >
          <button
            className="css-y3htlr"
            type="button"
          >
            Info
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="css-18mq3p9"
  >
    <div
      className="css-1stuufb"
    >
      <h1
        className="css-1b2tio5"
      >
        Reports list
      </h1>
      <div
        className="css-t9oodn"
      >
        <div
          className="css-1zje6z"
        >
          <div
            className="css-jwj6c2"
          >
            <input
              className="css-18swi04"
              onBlur={[Function]}
              onFocus={[Function]}
            />
            <div
              className="css-6kpmax"
            >
              <svg
                className="css-1oq5xej"
                viewBox="0 0 16 16"
              >
                <use
                  xlinkHref="#search"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="css-1zje6z"
        >
          <button
            className="css-y3htlr"
            type="button"
          >
            Info
          </button>
        </div>
      </div>
      <div
        className="css-1tr219l"
      >
        <div
          className="css-1zje6z"
        >
          <button
            className="css-y3htlr"
            type="button"
          >
            Details
          </button>
        </div>
        <div
          className="css-1zje6z"
        >
          <button
            className="css-y3htlr"
            type="button"
          >
            Info
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`PageLayoutWithRef renders succesfully 1`] = `
Array [
  <div
    className="css-1br8pp4"
  >
    <div
      className="css-1stuufb"
    >
      <h1
        className="css-1vvherk"
      >
        Cluster
      </h1>
      <span
        className="css-1ggp6x0"
      >
        Heading content
      </span>
      <div
        className="css-1tr219l"
      >
        <div
          className="css-1zje6z"
        >
          <button
            className="css-1mocbyz"
            type="button"
          >
            Details
          </button>
        </div>
        <div
          className="css-1zje6z"
        >
          <button
            className="css-1mocbyz"
            type="button"
          >
            Issues
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="css-1br8pp4"
  >
    <div
      className="css-1stuufb"
    >
      <h1
        className="css-1vvherk"
      >
        Cluster
      </h1>
      <span
        className="css-1ggp6x0"
      >
        Heading content
      </span>
      <div
        className="css-1tr219l"
      >
        <div
          className="css-1zje6z"
        >
          <button
            className="css-1mocbyz"
            type="button"
          >
            Details
          </button>
        </div>
        <div
          className="css-1zje6z"
        >
          <button
            className="css-1mocbyz"
            type="button"
          >
            Issues
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;
